--- a/secVerify-api-CSharp-client/secVerify-api-CSharp-client/secVerify-api-CSharp-client.csproj
+++ b/secVerify-api-CSharp-client/secVerify-api-CSharp-client/secVerify-api-CSharp-client.csproj
@@ -3,10 +3,28 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>secVerify_api_CSharp_client</RootNamespace>
+    <RepositoryUrl>https://github.com/RiceCookPanda/secVerify-api-CSharp-client.git</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <Authors>RiceCookPanda</Authors>
+    <Version>1.1.0</Version>
+    <PackageId>secVerify-api-CSharp-client</PackageId>
+    <Company>RiceCookPanda</Company>
+    <Description>https://www.mob.com/mobService/secverify 秒验.net服务端集成</Description>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>sec_verify_logo_small.png</PackageIcon>
+    <PackageProjectUrl>https://www.mob.com/mobService/secverify</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\Wake_Android\app\src\main\res\drawable\sec_verify_logo_small.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
